# resume

./: .gitignore  .ocamlformat  README.md  dune-project  package-lock.json  package.json  resume.opam  resume.sexp
src/: dune  resume.ml  server.mlx
src/assets/: index.css  output.css
src/components/: container.mlx  link.mlx  stack.mlx  text.mlx
src/layout/: layout.mlx
src/resume/: index.mlx  item.mlx  sections.mlx
test/: dune
